# jupiter_ws_ros2

./: .gitignore  99-astra-camera.rules  99-jupiter-devices.rules  CAMERA_SENSOR_STRUCTURE.md  CAMERA_TROUBLESHOOTING.md  CAMERA_UVC_SOLUTION.md  DEVICE_CONFIGURATION.md  EKF_TEST_FIX_SUMMARY.md  ENCODER_DEBUG_GUIDE.md  IMU_FIX_REPORT_20260105.md  IMU_TEST_GUIDE.md  KISS_ICP_Debugging_Log.md  LOG_ANALYSIS_20260105.md  MIGRATION_SUMMARY.md  ODOMETRY_TOPIC_ANALYSIS.md  ODOM_DRIFT_ROOT_CAUSE_ANALYSIS.md  README.md  README_backup_transbot.md  ROSMASTER_INTEGRATION_COMPLETE.md  ROSMASTER_INTERFACE_VERIFICATION.md  RTABMAP_COMPLETE_GUIDE.md  RUNTIME_ERROR_FIX.md  RVIZ_ODOM_TOPIC_FIX.md  SLAM_MAP_QUALITY_IMPROVEMENT_GUIDE.md  TIL_2026_01_17.md  TIL_Isaac_VSLAM_Analysis.md  WORK_LOG.md  WORK_SUMMARY.md  WORK_SUMMARY_20260105.md  WORK_SUMMARY_20260128.md  calibrate_linear.py  calibrate_rotation.py  calibration.py  check_all_sensors.sh  check_camera_sensors.sh  check_data_flow.sh  check_hz_problem.sh  check_imu_direction.py  check_lib_content.py  check_lib_path.py  (+30 more)
archive/: CALIBRATION_SCRIPT_FIX_COMPLETE.md  (+74 more)
src/imu_calib/: CMakeLists.txt  README.md  package.xml
src/imu_calib/include/imu_calib/: accel_calib.hpp  apply_calib.hpp  do_calib.hpp
src/imu_calib/src/: apply_calib.cpp  apply_calib_node.cpp  do_calib.cpp  do_calib_node.cpp
src/imu_calib/src/accel_calib/: accel_calib.cpp
src/jupiter_base/: CMakeLists.txt  package.xml
src/jupiter_base/include/jupiter_base/: base.hpp
src/jupiter_base/src/: base.cpp  base_node.cpp
src/jupiter_bringup/: CMakeLists.txt  bringup_tree.txt  package.xml  package.xml.bak  setup.cfg  setup.py
src/jupiter_bringup/jupiter_bringup/: Rosmaster_Lib.py  __init__.py  device_srv.py  jupiter_driver.py  jupiter_driver.py.bak  jupiter_driver_compensated.py  jupiter_patrol.py  rtcm_ublox_bridge.py  utilities.py
src/jupiter_bringup/launch/: astra_bringup.launch.py  astra_bringup.launch.py.backup  bringup.launch.py  calibrate_angular.launch.py  calibrate_linear.launch.py  jupiter_patrol.launch.py  ublox_only.launch.py  view_odom.launch.py
src/jupiter_bringup/param/: jupiter_driver_params.yaml  jupiter_patrol_params.yaml
src/jupiter_bringup/scripts/: dummy_scan_publisher.py
src/jupiter_bringup/udev/: 99-ublox-f9p.rules
src/jupiter_bringup_vo/: README_UBLOX_F9P.md  package.xml  setup.cfg  setup.py  setup.py.new
src/jupiter_bringup_vo/jupiter_bringup_vo/: Rosmaster_Lib.py  arm_jupiter.py  calibrate_angular.py  calibrate_linear.py  device_srv.py
src/jupiter_bringup_vo/launch/: base_footprint_tf.launch.py  bringup.launch.py  bringup.launch.py.backup  calibrate_imu.launch.py  joy_bringup.launch.py  rtk_test.launch.py  visual_odom.launch.py
src/jupiter_bringup_vo/param/: calibrate_angular_params.yaml  calibrate_linear_params.yaml  cors_config.yaml  jupiter_driver_params.yaml
src/jupiter_bringup_vo/resource/: jupiter_bringup_vo
src/jupiter_ctrl/: CMakeLists.txt  package.xml  setup.cfg  setup.py  tree.txt
src/jupiter_ctrl/jupiter_ctrl/: jupiter_joy.py  jupiter_joy.py.backup  jupiter_joy_new.py  jupiter_joy_simple.py  jupiter_keyboard.py  turtlebot_joy.py  twist_joy.py
src/jupiter_ctrl/launch/: jupiter_joy.launch  jupiter_joy.launch.py  jupiter_keyboard.launch  jupiter_keyboard.launch.py  turtlebot_joy.launch  turtlebot_joy.launch.py  twist_joy.launch  twist_joy.launch.py
src/jupiter_ctrl/scripts/: jupiter_joy.py
src/jupiter_description/: CMakeLists.txt  package.xml
src/jupiter_description/backup/: CMakeLists.txt  display_astra.launch  display_camera.launch  package.xml
src/jupiter_description/launch/: display_astra.launch.py  display_camera.launch.py
src/jupiter_description/rviz/: jupiter.rviz
src/jupiter_description/urdf/: jupiter_astra.urdf  jupiter_astra_expanded.urdf  jupiter_camera.urdf  jupiter_camera.xacro  jupiter_simple.urdf
src/jupiter_laser/: package.xml  package.xml.new  setup.cfg  setup.py
src/jupiter_laser/jupiter_laser/: common.py  laser_avoidance.py  laser_tracker.py  laser_warning.py
src/jupiter_laser/launch/: base.launch.py  laser_Avoidance.launch.py  laser_Tracker.launch.py  laser_Warning.launch.py  ydlidar_launch.py
src/jupiter_msgs/: CMakeLists.txt  package.xml
src/jupiter_msgs/msg/: General.msg  LaserAvoid.msg  PatrolWarning.msg
src/jupiter_msgs/srv/: Patrol.srv  RobotArm.srv
src/jupiter_nav/: MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  RTABMAP_HYBRID_SLAM.md  RTABMAP_INTEGRATION_GUIDE.md  RTABMAP_SETUP_COMPLETE.md  SLAM_COMPARISON.md  package.xml  setup.cfg  setup.py
src/jupiter_nav/config/: ekf_config.yaml  ekf_config.yaml.backup_20251110_170714  ekf_gps_config.yaml  foxglove_params.yaml  kiss_icp_light.yaml  nav2_gps_params.yaml  nav2_no_map_params.yaml  nav2_params.yaml  nav2_params_accurate.yaml  nav2_params_optimized.yaml  nav2_rolling_window_params.yaml  slam_params.yaml  slam_params_optimized.yaml
src/jupiter_nav/docs/: CPU_OPTIMIZATION.md  NAV2_ACCURACY_TUNING.md
src/jupiter_nav/jupiter_nav/: goal_relay_node.py
src/jupiter_nav/launch/: jupiter_full_system.launch.py  jupiter_full_system_3d.launch.py  jupiter_indoor.launch.py  jupiter_outdoor_gps.launch.backup.py  jupiter_outdoor_gps.launch.backup2.py  jupiter_outdoor_gps.launch.backup_kiss.py  jupiter_outdoor_gps.launch.py  jupiter_rolling_window.launch.py  nav2_navigation.launch.py  slam_params.yaml
src/jupiter_nav/rviz/: hybrid_slam.rviz  sllidar.rviz
src/jupiter_nav/scripts/: README.md  diagnose_encoder.py  ekf_comparison_test.py  odom_to_path.py  quick_encoder_test.py  save_map.sh  test_actual_rotation.py
src/jupiter_nav_VO/: package.xml  setup.py
src/jupiter_nav_VO/config/: nav2_params_velodyne.yaml  nav2_params_vslam.yaml
src/jupiter_nav_VO/launch/: nav2_velodyne_navigation.launch.py  nav2_vslam_integrate.launch.py  nav2_vslam_navigation.launch.py
src/rtcm_ublox_bridge/: README.md  package.xml  setup.cfg  setup.py
src/rtcm_ublox_bridge/launch/: ngii_rtk_full.launch.py
src/rtcm_ublox_bridge/resource/: rtcm_ublox_bridge
src/rtcm_ublox_bridge/rtcm_ublox_bridge/: rtcm_ublox_bridge_node.py  simple_ntrip.py
(+65 files in other folders)
