<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematype="packageFormat"?>
<package format="3">
  <name>imu_calib</name>
  <version>0.1.0</version>
  <description>ROS2 package for computing and applying IMU calibration parameters</description>


  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/dpkoch/imu_calib</url>
  <url type="bugtracker">https://github.com/dpkoch/imu_calib/issues</url>
  <url type="repository">https://github.com/dpkoch/imu_calib</url>

  <maintainer email="nassanromany74@gmail.com">Nathan Romany Fares (ROS 2 Humble Maintainer)</maintainer>
  <author email="daniel.p.koch@gmail.com">Daniel Koch (Original ROS 1 Author)</author>

  <!-- C++ build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>
  
  <!-- Eigen support -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  
  <exec_depend>eigen</exec_depend>	


  <!-- Testing tools -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
