<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>jupiter_description</name>
    <version>0.0.0</version>
    <description>The jupiter_description package</description>
    <maintainer email="yahboom@todo.todo">yahboom</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>xacro</depend>
    <depend>urdf</depend>
    <depend>robot_state_publisher</depend>
    <depend>joint_state_publisher</depend>
    <depend>joint_state_publisher_gui</depend>
    <depend>rviz2</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
